test/errors/identifiers_error/zs/defined_name/defined_type_field_name_error.zs
package defined_name.defined_type_field_name_error;

subtype int32 Defined;

struct Item
{
    uint16      param;
    Defined     a;
    uint32      Defined;
};
